--- a/style.css
+++ b/style.css
@@ -1,52 +1,48 @@
-body
-{
-    background-image: url("./images/mountain.jpg");
-    background-size:cover;    
-    background-repeat: no-repeat;              
+body {
+  background-image: url("./images/mountain.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-img 
-{
-    border-radius: 50%;
+img {
+  border-radius: 50%;
 }
-.content
-{
-    background: rgb(12,75,31);
-    background: linear-gradient(0deg, rgba(10, 75, 30, 0.9) 0%, rgba(45, 195, 210, 0.9) 100%);        
-    border-radius: 50px;    
-    display: flex; 
-    flex-wrap: wrap;     
-    flex-direction: row;         
-    margin: auto;
-    margin-top: 5%;
-    max-width: 70em; 
-    font-size: 150%;    
+.content {
+  background: rgb(12, 75, 31);
+  background: linear-gradient(
+    0deg,
+    rgba(10, 75, 30, 0.9) 0%,
+    rgba(45, 195, 210, 0.9) 100%
+  );
+  border-radius: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: auto;
+  margin-top: 5%;
+  max-width: 70em;
+  font-size: 150%;
 }
-.about
-{
-    background: rgba(85, 85, 85, 0.5);    
-    background-size: contain;
-    width: 320px;
-    height: 660px;    
-    margin: 2%;
-    text-align: center;        
-    border: 2px solid white;
-    border-radius: 50px;   
+.about {
+  background: rgba(85, 85, 85, 0.5);
+  background-size: contain;
+  width: 320px;
+  height: 660px;
+  margin: 2%;
+  text-align: center;
+  border-radius: 50px;
 }
-.info
-{           
-    background: rgba(85, 85, 85, 0.5);    
-    background-size: contain;
-    margin-top: 2%;     
-    width: 880px;
-    height: 660px;    
-    text-align: center;
-    border-radius: 50px;                    
+.info {
+  background: rgba(85, 85, 85, 0.5);
+  background-size: contain;
+  margin-top: 2%;
+  width: 880px;
+  height: 660px;
+  text-align: center;
+  border-radius: 50px;
 }
-h4
-{
-    margin: 2%;    
+h4 {
+  margin: 2%;
 }
-a
-{
-    text-decoration: none;
+a {
+  color: black;
 }
