--- a/style.css
+++ b/style.css
@@ -11,17 +11,18 @@ img {
   flex-direction: row;        
 }
 .content {
-  background: rgba(19, 5, 145, 0.5);      
+  /*background: rgba(19, 5, 145, 0.5);*/    
   width: 1100px;
   height: 1000px;
   color: white;  
   font-size: 300%;    
   margin-top: 10%;
   margin-left: 10%;  
-  
+  font-family: Calibri;  
 }
 .content h1 {
-  margin: 0%;       
+  margin: 0%;  
+  color: rgba(0, 255, 255, 0.8);     
 }
 .content h5 {
   margin: 0%;       
@@ -60,4 +61,9 @@ img {
 .links > div{
   margin: auto;
 }
+.links > div:hover{
+  background-color: rgba(5, 70, 0); 
+  border-radius: 60px;
+}
+
 
