--- a/style.css
+++ b/style.css
@@ -3,67 +3,108 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
-img {
-  border-radius: 50%;
-}
-.contain{
-  display: flex; 
-  flex-direction: row;        
+.contain {
+  display: flex;
+  flex-direction: row;
 }
 .content {
-  /*background: rgba(19, 5, 145, 0.5);*/    
-  width: 1100px;
-  height: 1000px;
-  color: white;  
-  font-size: 300%;    
-  margin-top: 10%;
-  margin-left: 10%;  
-  font-family: Calibri;  
+  width: 1000px;
+  color: white;
+  font-size: 300%;
+  margin-top: 12%;
+  margin-left: 7%;
+  margin-right: 3%;
+  font-family: Calibri;
+  min-width: 500px;
 }
 .content h1 {
-  margin: 0%;  
-  color: rgba(0, 255, 255, 0.8);     
+  margin: 0%;
+  color: rgba(0, 255, 255, 0.8);
 }
 .content h5 {
-  margin: 0%;       
+  margin: 0%;
+}
+.content h5 > div {
+  margin: 0%;
+  font-size: 60%;
+}
+.content p {
+  margin: 2%;
+}
+.con {
+  margin: 2%;
+  color: rgba(0, 255, 255, 0.8);
+}
+.mail {
+  color: aqua;
+  font-size: 75%;
 }
 .menu {
-  background: rgba(85, 85, 85, 0.7);  
+  background: rgba(85, 85, 85, 0.7);
   width: 320px;
-  height: 380px;
-  margin: 2%;    
-  border-radius: 50px;        
+  min-width: 320px;
+  height: 400px;
+  margin: 2%;
+  border-radius: 40px;
 }
-.menu > div {     
-  text-align: center; 
-  color: Silver;
-  font-size: 200%;    
+.menu > div {
+  text-align: center;
+  font-size: 200%;
   border-top: 2px solid silver;
-  border-bottom: 2px solid silver;    
+  border-bottom: 2px solid silver;
   position: relative;
-  top: 13%;
+  top: 8%;
 }
-.menu > div:hover{
-  background-color: rgba(5, 70, 0);
+.menu > div:hover {
+  background-color: aqua;
   color: white;
 }
-.menu h4{
-  margin:4%;
+.menu h4 {
+  margin: 4%;
 }
-.links {   
+.menu a {
+  text-decoration: none;
+  color: white;
+}
+.menu a:hover {
+  text-decoration-line: underline;
+  color: black;
+}
+.links {
   width: 380px;
-  height: 140px;  
+  height: 140px;
   vertical-align: top;
-  border-bottom: 5px solid silver; 
-  display: flex; 
-  flex-direction: row;        
+  border-bottom: 5px solid silver;
+  display: flex;
+  flex-direction: row;
 }
-.links > div{
+.links > div {
   margin: auto;
 }
-.links > div:hover{
-  background-color: rgba(5, 70, 0); 
-  border-radius: 60px;
+.links > div:hover {
+  background-color: rgba(0, 255, 255, 0.8);
+  border-radius: 80px;
 }
-
-
+.btn {
+  border: 2px solid aqua;
+  color: aqua;
+  background-color: rgba(0, 30, 0, 0.7);
+  padding: 15px 45px;
+  font-size: 75%;
+  cursor: pointer;
+  display: inline-block;
+  transition-duration: 0.4s;
+  border-radius: 20px;
+}
+.btn:hover {
+  background-color: aqua;
+  color: black;
+}
+.port {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.port > div {
+  margin: 0%;
+}
