--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   background-image: url("./images/Backgr.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-color: black;
 }
 .contain {
   display: flex;
@@ -105,6 +106,12 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
 }
-.port > div {
+/* .port > a { doesent work!!!
   margin: 0%;
+}*/
+.port > div:hover {  
+  background: rgba(85, 85, 85, 0.85);
+}
+.port img:hover {
+  border-radius: 50%;  
 }
