--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@ body {
   margin-left: 7%;
   margin-right: 3%;
   font-family: Calibri;
-  min-width: 500px;
+  min-width: 300px;
 }
 .content h1 {
   margin: 0%;
-  color: rgba(0, 255, 255, 0.8);
+  color: aqua;
 }
 .content h5 {
   margin: 0%;
@@ -34,7 +34,7 @@ body {
 }
 .con {
   margin: 2%;
-  color: rgba(0, 255, 255, 0.8);
+  color: aqua;
 }
 .mail {
   color: aqua;
@@ -85,6 +85,7 @@ body {
 .links > div:hover {
   background-color: rgba(0, 255, 255, 0.8);
   border-radius: 80px;
+  transition-duration: 0.5s;
 }
 .btn {
   border: 2px solid aqua;
@@ -94,7 +95,7 @@ body {
   font-size: 75%;
   cursor: pointer;
   display: inline-block;
-  transition-duration: 0.4s;
+  transition-duration: 0.5s;
   border-radius: 20px;
 }
 .btn:hover {
@@ -109,9 +110,15 @@ body {
 /* .port > a { doesent work!!!
   margin: 0%;
 }*/
-.port > div:hover {  
-  background: rgba(85, 85, 85, 0.85);
-}
 .port img:hover {
-  border-radius: 50%;  
+  border-radius: 50%;
+}
+ul h3 {
+  color: aqua;
+}
+li {
+  font-size: 80%;
+}
+p a {
+  color: aqua;
 }
