--- a/style.css
+++ b/style.css
@@ -11,16 +11,21 @@ body {
 .content {
   width: 1000px;
   color: white;
-  font-size: 300%;
+  font-size: 280%;
   margin-top: 12%;
-  margin-left: 7%;
-  margin-right: 3%;
+  margin-left: 6%;
+  margin-right: 2%;
   font-family: Calibri;
-  min-width: 300px;
+  min-width: 300px;  
 }
 .content h1 {
   margin: 0%;
   color: aqua;
+}
+.content h2 {
+  margin: 0%;
+  color: aqua;
+  font-size: 185%;
 }
 .content h5 {
   margin: 0%;
@@ -30,7 +35,15 @@ body {
   font-size: 60%;
 }
 .content p {
-  margin: 2%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+.content img {
+  float: right;  
+  border-radius: 40%;  
+}
+.content > div img {  
+  border-radius: 0%;  
 }
 .mail {
   color: aqua;
@@ -41,11 +54,11 @@ body {
   transition-duration: 0.2s;
   transform: scaleX(0.90) scaleY(0.90);
 }
-.menu {
+.menu { /* lägg till att menyn blir dropdown ifall fönstret blir för litet */
   background: rgba(85, 85, 85, 0.7);
-  width: 320px;
-  min-width: 320px;
-  height: 400px;
+  width: 280px;
+  min-width: 250px;
+  height: 380px;
   margin: 2%;
   border-radius: 40px;
 }
@@ -55,18 +68,17 @@ body {
   border-top: 2px solid silver;
   border-bottom: 2px solid silver;
   position: relative;
-  top: 8%;
+  top: 8%;  
 }
-.menu > div:hover {
-  background-color: aqua;
-  color: white;
-}
+/*.menu > div:hover { Behöver jag verkligen bakgrundsfärg?
+  background-color: aqua;  
+}*/
 .menu h4 {
   margin: 4%;
 }
 .menu h4:hover {
   transition-duration: 0.3s;
-  transform: scaleX(1.1) scaleY(1.1);
+  transform: scaleX(1.1) scaleY(1.1);  
 }
 .menu a {
   text-decoration: none;
@@ -74,9 +86,9 @@ body {
 }
 .menu a:hover {
   text-decoration-line: underline;
-  color: black;
+  color: aqua;
 }
-.links {
+.links { /* lägg till att bilderna blir överst ifall fönstret blir för litet */
   width: 380px;
   height: 140px;
   vertical-align: top;
@@ -91,7 +103,7 @@ body {
   border-radius: 60px;
 }    
 .links > div img:hover {
-  background-color: rgba(0, 255, 255, 0.8);      
+  background-color: aqua;      
   transition-duration: 0.4s;
   transform: scaleX(0.85) scaleY(0.85)
 }
@@ -114,11 +126,8 @@ body {
 .port {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: wrap;   
 }
-/* .port > a { doesent work!!!
-  margin: 0%;
-}*/
 .port img:hover {
   border-radius: 50%;
 }
@@ -135,4 +144,3 @@ p a:hover {
   filter: brightness(50%);    
   transition-duration: 0.3s;
 }
-
