--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ body {
   background-repeat: no-repeat;
   background-color: black;
 }
+@media only screen and (max-width: 600px) {
+  body {
+    background-image: url("./images/Backgr.jpg");
+    background-size: fill;
+    background-repeat: no-repeat;
+  }
+}
 .contain {
   display: flex;
   flex-direction: row;
