--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
   transition-duration: 0.2s;
   transform: scaleX(0.9) scaleY(0.9);
 }
-@media only screen and (min-width: 900px) {  
+@media only screen and (min-width: 1100px) {  
   .menu {
     background: rgba(85, 85, 85, 0.7);
     width: 260px;
@@ -98,7 +98,7 @@
     text-decoration-line: underline;
     color: aqua;
   }
-  .links {    
+  .links {
     width: 380px;
     min-width: 140px;
     height: 140px;
@@ -119,21 +119,20 @@
     transform: scaleX(0.85) scaleY(0.85);
   }
 }
-@media only screen and (max-width: 900px) { 
-  /* Lägg till i en expanderande meny som overlay */
-  .menu {    
+@media only screen and (max-width: 1100px) {  
+  .menu {
     display: none;
-  }  
-  .links {    
-    display: none;                 
-  }    
+  }
+  .links {
+    display: none;
+  }
 }
 .btn {
   border: 2px solid aqua;
   color: aqua;
   background-color: rgba(0, 30, 0, 0.7);
-  padding: 15px 45px;  
-  font-size: 75%;  
+  padding: 15px 45px;
+  font-size: 75%;
   cursor: pointer;
   display: inline-block;
   transition-duration: 0.5s;
@@ -164,4 +163,46 @@ p a {
 p a:hover {
   filter: brightness(50%);
   transition-duration: 0.3s;
+}
+@media only screen and (min-width: 1100px) {
+  nav {
+    display: none;
+  }
+@media only screen and (max-width: 1100px) {
+  nav input {
+    display: none;
+  }
+  nav {
+    overflow: hidden;
+  }
+  nav ul {
+    overflow: hidden;
+    width: 0;
+    height: 0;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  nav input:checked ~ ul {
+    width: 100%;
+    height: 100%;
+  }
+  a.button {
+    background-color: silver;
+    height: fit-content;
+    width: fit-content;
+    font-size: 200%;
+    padding: 0.5em;
+    text-align: center;
+  }
+  a.button:hover {
+    background-color: gold;
+  }
+  .link-tree {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-left: 10em;
+   
+  }  
 }
